<resources>
    <string name="app_name">Collaboration Example</string>
    <string name="greeting_message">Welcome to the app, please choose an activity to view.</string>

    <string name="button_eric">Eric\'s Button</string>
    <string name="button_christina">Christina\'s Button</string>
    <string name="button_gerard">Ger\'s Button</string>
    <string name="button_tomas">Tom\'s Button</string>
    <string name="button_josh">Josh\'s Button</string>

    <!--Tomas: here I added this; 2/9/2016 -->
    <string name="tomas_button_try_push">Just a try</string>
    <string name="tomas_string_1">String 1</string>
    <string name="tomas_string_2">String 2</string>


    <string name="phSmall">insert text here</string>
    <string name="phLarge">xt ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
</resources>
